--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,16 @@ dependencies = [
     "jupyterlab>=3.0",
     "notebook",
     "kedro[jupyter]~=0.19.10",
-    "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset, plotly-plotlydataset, plotly-jsondataset, matplotlib-matplotlibwriter]>=3.0",
+    "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset, plotly-plotlydataset, plotly-jsondataset, matplotlib-matplotlibwriter, tensorflow, tensorflow-tensorflowmodeldataset]>=3.0",
     "kedro-viz>=6.7.0",
     "scikit-learn~=1.5.1",
-    "seaborn~=0.12.1"
+    "seaborn~=0.12.1",
+    "transformers==4.47.0",
+    "tensorflow==2.16.2",
+    "tensorflow-macos",
+    "tensorflow-metal",
+    "mlflow"
+
 ]
 
 [project.scripts]
