--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -39,66 +39,87 @@
 # (transcoding), templating and a way to reuse arguments that are frequently repeated. See more here:
 # https://docs.kedro.org/en/stable/data/data_catalog.html
 
-companies:
+train_data:
   type: pandas.CSVDataset
-  filepath: data/01_raw/companies.csv
+  filepath: data/01_raw/jigsaw-toxic-comment-train.csv
 
-reviews:
+val_data:
   type: pandas.CSVDataset
-  filepath: data/01_raw/reviews.csv
+  filepath: data/01_raw/validation.csv
 
-shuttles:
-  type: pandas.ExcelDataset
-  filepath: data/01_raw/shuttles.xlsx
-  load_args:
-    engine: openpyxl
+test_data:
+  type: pandas.CSVDataset
+  filepath: data/01_raw/validation.csv
 
-preprocessed_companies:
-  type: pandas.ParquetDataset
-  filepath: data/02_intermediate/preprocessed_companies.parquet
+prediction_data:
+  type: pandas.CSVDataset
+  filepath: data/01_raw/prediction.csv
 
-preprocessed_shuttles:
-  type: pandas.ParquetDataset
-  filepath: data/02_intermediate/preprocessed_shuttles.parquet
 
-model_input_table:
-  type: pandas.ParquetDataset
-  filepath: data/03_primary/model_input_table.parquet
 
-regressor:
-  type: pickle.PickleDataset
-  filepath: data/06_models/regressor.pickle
+dl_model:
+  type: tensorflow.TensorFlowModelDataset
+  filepath: data/06_models/dl_model.hd5
   versioned: true
 
-metrics:
-  type: tracking.MetricsDataset
-  filepath: data/09_tracking/metrics.json
-
-companies_columns:
-  type: tracking.JSONDataset
-  filepath: data/09_tracking/companies_columns.json
-
-shuttle_passenger_capacity_plot_exp:
-  type: plotly.PlotlyDataset
-  filepath: data/08_reporting/shuttle_passenger_capacity_plot_exp.json
-  versioned: true
-  plotly_args:
-    type: bar
-    fig:
-      x: shuttle_type
-      y: passenger_capacity
-      orientation: h
-    layout:
-      xaxis_title: Shuttles
-      yaxis_title: Average passenger capacity
-      title: Shuttle Passenger capacity
-
-shuttle_passenger_capacity_plot_go:
-  type: plotly.JSONDataset
-  filepath: data/08_reporting/shuttle_passenger_capacity_plot_go.json
+champions_model:
+  type: tensorflow.TensorFlowModelDataset
+  filepath: data/06_models/champions_model.hd5
   versioned: true
 
-dummy_confusion_matrix:
-  type: matplotlib.MatplotlibWriter
-  filepath: data/08_reporting/dummy_confusion_matrix.png
-  versioned: true
+
+# shuttles:
+#   type: pandas.ExcelDataset
+#   filepath: data/01_raw/shuttles.xlsx
+#   load_args:
+#     engine: openpyxl
+
+# preprocessed_companies:
+#   type: pandas.ParquetDataset
+#   filepath: data/02_intermediate/preprocessed_companies.parquet
+
+# preprocessed_shuttles:
+#   type: pandas.ParquetDataset
+#   filepath: data/02_intermediate/preprocessed_shuttles.parquet
+
+# model_input_table:
+#   type: pandas.ParquetDataset
+#   filepath: data/03_primary/model_input_table.parquet
+
+# regressor:
+#   type: pickle.PickleDataset
+#   filepath: data/06_models/regressor.pickle
+#   versioned: true
+
+# metrics:
+#   type: tracking.MetricsDataset
+#   filepath: data/09_tracking/metrics.json
+
+# companies_columns:
+#   type: tracking.JSONDataset
+#   filepath: data/09_tracking/companies_columns.json
+
+# shuttle_passenger_capacity_plot_exp:
+#   type: plotly.PlotlyDataset
+#   filepath: data/08_reporting/shuttle_passenger_capacity_plot_exp.json
+#   versioned: true
+#   plotly_args:
+#     type: bar
+#     fig:
+#       x: shuttle_type
+#       y: passenger_capacity
+#       orientation: h
+#     layout:
+#       xaxis_title: Shuttles
+#       yaxis_title: Average passenger capacity
+#       title: Shuttle Passenger capacity
+
+# shuttle_passenger_capacity_plot_go:
+#   type: plotly.JSONDataset
+#   filepath: data/08_reporting/shuttle_passenger_capacity_plot_go.json
+#   versioned: true
+
+# dummy_confusion_matrix:
+#   type: matplotlib.MatplotlibWriter
+#   filepath: data/08_reporting/dummy_confusion_matrix.png
+#   versioned: true
