--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,8 @@ notebook
 scikit-learn~=1.5.1
 seaborn~=0.12.1
 transformers==4.47.0
+fastapi==0.115.6
+uvicorn==0.34.0
+tensorflow==2.16.2
+mlflow==2.19.0
+tf-keras==2.16.0
