--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,5 @@ uvicorn==0.34.0
 tensorflow==2.16.2
 mlflow==2.19.0
 tf-keras==2.16.0
+prometheus-fastapi-instrumentator==7.0.0
+python-multipart==0.0.20
